# Practice-FastAPI-Score-Calculator

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.db-only.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/business/: company_service.py  score_service.py
src/business/pydantic_schemas/: company.py  country.py  financials.py  score.py
src/db/: config.py  db_setup.py
src/db/alembic/: env.py
src/db/alembic/sample_data/: sample_companies.json  sample_countries.json  sample_financials.json
src/db/alembic/versions/: cb15b9f492e6_add_tables_and_data.py
src/db/models/: company.py  country.py  mixins.py  score.py
src/persistence/utilities/: company_crud.py  country_crud.py  score_crud.py
src/presentation/: company_controller.py  country_controller.py  score_controller.py
tests/: conftest.py
tests/business/: company_service_test.py  score_service_test.py
tests/presentation/: country_controller_test.py  score_controller_test.py
